src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASDNoProceduresPA__c</fullName>
        <label>ASD  - No. Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Administrative_Asst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Administrative Asst.</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assura_Launch_Competitive_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to indicate that this Practitioner is a target in the Assura Launch Campaign</description>
        <inlineHelpText>Check this box to indicate that this Practitioner is a target in the Assura Launch Campaign</inlineHelpText>
        <label>Assura Launch - Competitive Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assura_Launch_SJM_Loyal_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to indicate that this Practitioner is a target in the Assura Launch Campaign</description>
        <inlineHelpText>Check this box to indicate that this Practitioner is a target in the Assura Launch Campaign</inlineHelpText>
        <label>Assura Launch - SJM Loyal Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cardiac_Conference_Attendance_Comments__c</fullName>
        <label>Cardiac Conference Attendance Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cardiac_Conference_Attendance__c</fullName>
        <label>Cardiac Conference Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>AATS 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACC 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACDC 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZCTS 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZET 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APHRS 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCVTS 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATAS 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Society NZ 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRSE 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Pacing 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSANZ 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSI 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EACTS 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHRA Europace CardioStim 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESC 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europace 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EuroPCR 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRS 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRSA 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCR London Valves 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RACS 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCAI 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stroke 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCT 2016</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Bio__c</fullName>
        <label>Doctor Bio</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Executive_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Senior Decision Makers</description>
        <inlineHelpText>Tick this box if this person is a senior decision maker within the organisation.</inlineHelpText>
        <label>Executive Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fellowship__c</fullName>
        <label>Fellowship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_of_Practice__c</fullName>
        <inlineHelpText>Use this field to describe specific areas which a physician practices or has an active interest</inlineHelpText>
        <label>Fields of Practice</label>
        <picklist>
            <controllingField>Sub_Specialty__c</controllingField>
            <picklistValues>
                <fullName>Back Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Nurse Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Implantation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Echocardiography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrophysiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head &amp; Neck Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movement Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurointervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Unit Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehabilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renal Denervation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stroke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Heart - Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Heart - Paediatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tavi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HFMD_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field to designate targets within the Heart Failure Market Development program</description>
        <inlineHelpText>Use this field to designate targets within the Heart Failure Market Development program</inlineHelpText>
        <label>HFMD Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Honours__c</fullName>
        <label>Honours</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IIN_2015_Signed_Invitation_Letter__c</fullName>
        <label>IIN 2015 Signed Invitation Letter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IIN_Accom_Req__c</fullName>
        <label>IIN Accom. Req.</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IIN_Flights_Req__c</fullName>
        <label>IIN Flights Req.</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBEX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_CPWG_at_WCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in CPWG at WCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KOL_Classification__c</fullName>
        <description>Used to identify and classify KOL and Luminary customers</description>
        <inlineHelpText>Note: A &quot;Developing KOL&quot; is a Fellow or up and coming consultant. A &quot;Luminary&quot; is a star product advocate but not necessarily respected as a subject matter expert enough to be a KOL</inlineHelpText>
        <label>KOL Classification</label>
        <picklist>
            <picklistValues>
                <fullName>International KOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National KOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional KOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing KOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luminary</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Training__c</fullName>
        <inlineHelpText>Use this field to describe a practitioner&apos;s clinical role or qualifications</inlineHelpText>
        <label>Level of Training</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Trainee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Practitioner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Numbers__c</fullName>
        <label>License Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Licensed_Country__c</fullName>
        <label>Licensed Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensed_States_Prov__c</fullName>
        <label>Licensed States\Providences</label>
        <picklist>
            <controllingField>Licensed_Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MHVMitralBrandLoyalty__c</fullName>
        <label>MHV - Mitral - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>SJM-Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT-ATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin - Carbomedics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_s_Emp_Num__c</fullName>
        <label>Manager&apos;s Emp Num</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_School__c</fullName>
        <label>Medical School</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mini_Repair_Procedures_Mitral__c</fullName>
        <label>Mini Repair Procedures Mitral %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Comments__c</fullName>
        <label>Mobile Phone Comments</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Use Unless Given To You</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text before calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Text This Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Record owner before using this number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use as primary contact number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Operating_Style__c</fullName>
        <label>Operating Style</label>
        <picklist>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detailer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Mobile_Phone_Comments__c</fullName>
        <label>Other Mobile Phone Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Web__c</fullName>
        <label>Other Web</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Personal_Bio__c</fullName>
        <inlineHelpText>You can add photos, hyperlinks and free text to describe this person in this field.</inlineHelpText>
        <label>Personal Bio</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Information__c</fullName>
        <label>Personal Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <inlineHelpText>If you select &quot;other&quot; please ensure you enter their full position title in the next field</inlineHelpText>
        <label>Position Title</label>
        <picklist>
            <picklistValues>
                <fullName>CARDIAC Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Clinical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_name__c</fullName>
        <label>Preferred Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedurepreferences__c</fullName>
        <label>Procedure preferences</label>
        <picklist>
            <picklistValues>
                <fullName>Introducer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RepairMitralBrandLoyalty__c</fullName>
        <label>Repair - Mitral - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>EDW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <label>Residency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJM_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SJM ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Anaesthesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics &amp; Gynaecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Specialty__c</fullName>
        <label>Sub Specialty</label>
        <picklist>
            <controllingField>Specialty__c</controllingField>
            <picklistValues>
                <fullName>Anaesthesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Pharmacology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Child Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology and Hepatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Paediatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatric Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haematology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunology and Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensive Care Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interventional Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neonatal/Perinatal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephrology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paediatric Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palliative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiation Oncology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_AF_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the AF Division.</inlineHelpText>
        <label>Territory Manager - AF 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_AF_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the AF Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the AF Division.</inlineHelpText>
        <label>Territory Manager - AF 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>